// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAutomatedChecksCommandBar universalCardsUI disabled should return command bar with renderExport as false and renderStartOver as false 1`] = `
<DetailsViewCommandBar
  assessmentsProvider={null}
  featureFlagStoreData={
    Object {
      "universalCardsUI": false,
    }
  }
  renderExport={false}
  renderStartOver={false}
/>
`;

exports[`getAutomatedChecksCommandBar universalCardsUI enabled should return command bar with renderExport as true and renderAndStartOver as true 1`] = `
<DetailsViewCommandBar
  assessmentsProvider={null}
  featureFlagStoreData={
    Object {
      "universalCardsUI": true,
    }
  }
  renderExport={true}
  renderStartOver={true}
/>
`;
